# Mercury

hg/: Cargo.toml
hg/src/: lib.rs  messages.rs  publisher.rs  subscriber.rs
hg/src/messages/: vec3.rs
mercury/: Cargo.toml
mercury/src/: node0.rs
mercury/src/master/: master.rs
mercury/src/messages/: mod.rs
